--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="left box">
               <h2>Nosotros</h2>
               <div class="content">
-                <p>Empresa dedica a la ciberseguridad, brinda soporte tecnico como cursos para que aprendas desdee 0 y puedas demostrar todo lo aprendido en nuevos retos...</p>
+                <p>Empresa dedica a la ciberseguridad, brinda soporte tecnico como cursos para que aprendas desde 0 y puedas demostrar todo lo aprendido en nuevos retos...</p>
                 br
                 <ul class="social">
                   <li>
