--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2>Formulario</h2>
 
             <form action="#" id="formulario">
-                <input type="text" id="nombre" placeholder="Ingresa un nommbre">
+                <input type="text" id="nombre" placeholder="Ingresa un nombre">
                 <input type="text" id="apellido" placeholder="Ingresa un apellido">
                 <input type="text" id="curso" placeholder="Ingresa el curso que comprastes">
                 <button type="submit" id="btnAgregar">Agregar</button>
